; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_condtype_to_ocf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_condtype_to_ocf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTM_BLE_META_PF_ADDR = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_UUID = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_SOL_UUID = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_LOCAL_NAME = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_MANU_DATA = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_SRVC_DATA = common dso_local global i32 0, align 4
@BTM_BLE_META_PF_ALL = common dso_local global i32 0, align 4
@BTM_BLE_PF_TYPE_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btm_ble_condtype_to_ocf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %19 [
    i32 134, label %5
    i32 129, label %7
    i32 130, label %9
    i32 133, label %11
    i32 132, label %13
    i32 131, label %15
    i32 128, label %17
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @BTM_BLE_META_PF_ADDR, align 4
  store i32 %6, i32* %3, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i32, i32* @BTM_BLE_META_PF_UUID, align 4
  store i32 %8, i32* %3, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* @BTM_BLE_META_PF_SOL_UUID, align 4
  store i32 %10, i32* %3, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load i32, i32* @BTM_BLE_META_PF_LOCAL_NAME, align 4
  store i32 %12, i32* %3, align 4
  br label %21

13:                                               ; preds = %1
  %14 = load i32, i32* @BTM_BLE_META_PF_MANU_DATA, align 4
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @BTM_BLE_META_PF_SRVC_DATA, align 4
  store i32 %16, i32* %3, align 4
  br label %21

17:                                               ; preds = %1
  %18 = load i32, i32* @BTM_BLE_META_PF_ALL, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %1
  %20 = load i32, i32* @BTM_BLE_PF_TYPE_MAX, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %17, %15, %13, %11, %9, %7, %5
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
